--- a/wxapp/app.json
+++ b/wxapp/app.json
@@ -1,11 +1,14 @@
 {
   "pages":[
+   
     "pages/index/index",
     "pages/upload_img/upload_img",
     "pages/click_model/click_model",
+    "pages/change_tab/change_tab",
+    
 
 
-
+    "pages/component/tab/tab",
     "pages/component/model/model"
 
   ],
